@@ -1,3 +1,4 @@
+#! /usr/bin/dh-exec
 usr/bin
 usr/lib/gnome-terminal
 usr/lib/systemd/user
@@ -6,5 +7,6 @@ usr/share/applications
 usr/share/dbus-1/services
 usr/share/glib-2.0/schemas
 usr/lib/nautilus/extensions-3.0/libterminal-nautilus.so
+[linux-any] usr/share/gnome-shell/search-providers/gnome-terminal-search-provider.ini
 
 debian/gnome-terminal.wrapper /usr/bin
